tests/suite/snapshots/suite__parse__tests__parse__length01_2.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/length01_2.xi:2:17]
   │
 2 │   a = length(asd,ads)
   ·                 ┬  
   ·                 ╰── Unexpected token
───╯

